<version new> fixed buttons

--- a/app/src/main/res/layout/activity_update_medication.xml
+++ b/app/src/main/res/layout/activity_update_medication.xml
@@ -21,7 +21,8 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
     <ImageView
         android:id="@+id/imageView1"
@@ -59,7 +60,8 @@
         android:paddingStart="10dp"
         android:paddingEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
     <TimePicker
         android:id="@+id/timePicker2"
