<version new> fixed navigation menu

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_mood">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.application.vozyk.ui.home.HomeFragment"
+        android:id="@+id/navigation_mood"
+        android:name="com.application.vozyk.ui.home.Mood"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_mood" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.application.vozyk.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_sleep"
+        android:name="com.application.vozyk.ui.dashboard.Sleep"
+        android:label="Sleep"
+        tools:layout="@layout/fragment_sleep" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.application.vozyk.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/navigation_habits"
+        android:name="com.application.vozyk.ui.habits.Habits"
+        android:label="Habit"
+        tools:layout="@layout/fragment_habits" />
 </navigation>
