--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,8 +16,8 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
     <item
-        android:id="@+id/navigation_habits"
+        android:id="@+id/navigation_other"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="Habits" />
+        android:title="Other" />
 
 </menu>
