--- a/app/src/main/res/layout/fragment_mood.xml
+++ b/app/src/main/res/layout/fragment_mood.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.Mood">
+    tools:context=".MainActivity">
 
   <ScrollView
       android:id="@+id/scroll_view_to_take_screen_show_in_good_habtis"
@@ -1654,8 +1654,8 @@
 
           <View
               android:id="@+id/very_good_mood_check_mark_in_mood"
-              android:layout_width="40dp"
-              android:layout_height="40dp"
+              android:layout_width="33dp"
+              android:layout_height="34dp"
               android:background="@drawable/round_check_24"
               android:visibility="invisible"
               app:layout_constraintBottom_toBottomOf="@+id/very_good_mood_in_habits"
@@ -2108,6 +2108,7 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/card_to_show_line_graph_for_mood_tracker">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_inside_card_to_show_days_of_week_habits"
