--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="Mood" />
 
     <item
-        android:id="@+id/navigation_sleep"
+        android:id="@+id/navigation_breathe"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Sleep" />
+        android:title="Breathe" />
 
     <item
         android:id="@+id/navigation_notifications"
@@ -17,7 +17,7 @@
         android:title="@string/title_notifications" />
     <item
         android:id="@+id/navigation_other"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_baseline_other_houses_24"
         android:title="Other" />
 
 </menu>
