--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -5,6 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E7E8D1"
     tools:context=".Registration">
 
 
@@ -15,14 +16,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="13dp"
         android:text="Create A New Account"
-        android:textSize="15sp"
+        android:textColor="#234E70"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/fullName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.716" />
+        app:layout_constraintVertical_bias="0.595" />
 
     <EditText
         android:id="@+id/fullName"
@@ -110,15 +112,15 @@
 
     <Button
         android:id="@+id/register"
-        android:layout_width="100dp"
-        android:layout_height="56dp"
+        android:layout_width="121dp"
+        android:layout_height="55dp"
         android:layout_gravity="start"
-        android:layout_marginBottom="184dp"
+        android:layout_marginBottom="180dp"
+        android:backgroundTint="#A7BEAE"
         android:enabled="true"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
@@ -135,15 +137,17 @@
 
     <TextView
         android:id="@+id/createText"
-        android:layout_width="204dp"
-        android:layout_height="30dp"
+        android:layout_width="209dp"
+        android:layout_height="39dp"
         android:layout_marginStart="101dp"
         android:layout_marginEnd="94dp"
-        android:layout_marginBottom="132dp"
+        android:layout_marginBottom="112dp"
         android:text="Already registered? Login here"
+        android:textColor="#234E70"
+        android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/register"
         app:layout_constraintStart_toStartOf="parent" />
 
