--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,8 @@
     <color name="fav">#607D8B</color>
     <color name="colorDayT">#ffff7a</color>
     <color name="colorDayB">#a0e6ff</color>
-    <color name="upArrow">#ddffca</color>
-    <color name="downArrow">#ffbdff</color>
+    <color name="upArrow">#D7C49E</color>
+    <color name="downArrow">#343148</color>
     <color name="colorDelete">#F44336</color>
     <color name="launcherBackground">#EEAF28</color>
 </resources>
