<version new> add Meditation activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="downArrow">#343148</color>
     <color name="colorDelete">#F44336</color>
     <color name="launcherBackground">#EEAF28</color>
+    <color name="mint">#1BEDD9</color>
 </resources>
