--- a/app/src/main/res/layout/activity_add_new_pills.xml
+++ b/app/src/main/res/layout/activity_add_new_pills.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#E7E8D1"
     tools:context=".Settings">
 
 
@@ -90,8 +91,9 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_below="@+id/timePicker1"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="191dp"
+        android:backgroundTint="#B85042"
         android:paddingStart="50dp"
         android:paddingEnd="50dp"
         android:text="Cancel" />
@@ -101,10 +103,11 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_below="@+id/timePicker1"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="220dp"
         android:layout_marginTop="191dp"
         android:paddingStart="50dp"
         android:paddingEnd="50dp"
+        android:backgroundTint="#A7BEAE"
         android:text="Submit" />
 
     <TextView
@@ -114,6 +117,7 @@
         android:layout_below="@id/medicationDosage"
         android:layout_marginStart="20dp"
         android:layout_marginTop="23dp"
+        android:textColor="#234E70"
         android:text="Time to take Medication: "
         android:textSize="20dp"
         android:textStyle="bold" />
@@ -124,6 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/timePicker1"
         android:layout_marginStart="20dp"
+        android:textColor="#234E70"
         android:layout_marginTop="-25dp"
         android:text="Date to take Medication: "
         android:textSize="20dp"
