--- a/app/src/main/res/layout/activity_adhd.xml
+++ b/app/src/main/res/layout/activity_adhd.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#E7E8D1">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -29,7 +30,8 @@
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:textAllCaps="false"
-            android:textColor="#3F51B5"
+            android:textColor="#234E70"
+            android:textStyle="bold"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
@@ -47,7 +49,8 @@
             android:textSize="22sp"
             android:autoSizeTextType="uniform"
             android:textAllCaps="false"
-            android:textColor="#3F51B5"
+            android:textStyle="bold"
+            android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
@@ -61,8 +64,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#C0B2E7"
+            android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
             android:textColor="#FFFFFFFF"
             android:textColorHighlight="#664564"
@@ -71,6 +73,7 @@
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/questions"
         />
+<!--        android:background="@drawable/rounded_button"-->
 
         <Button
             android:text="adhdA2"
@@ -80,8 +83,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#C0B2E7"
+            android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
             android:textColor="#FFFFFFFF"
             android:textColorHighlight="#664564"
@@ -90,6 +92,7 @@
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/choiceA"
         />
+<!--        android:background="@drawable/rounded_button"-->
 
         <Button
             android:text="adhdA3"
@@ -99,8 +102,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#C0B2E7"
+            android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
             android:textColor="#FFFFFFFF"
             android:textColorHighlight="#664564"
@@ -109,6 +111,7 @@
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/choiceB"
         />
+<!--        android:background="@drawable/rounded_button"-->
 
         <Button
             android:text="adhdA4"
@@ -118,8 +121,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#C0B2E7"
+            android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
             android:textColor="#FFFFFFFF"
             android:textColorHighlight="#664564"
@@ -128,6 +130,7 @@
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/choiceC"
         />
+<!--        android:background="@drawable/rounded_button"-->
 
         <Button
             android:text="adhdA5"
@@ -137,8 +140,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#C0B2E7"
+            android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
             android:textColor="#FFFFFFFF"
             android:textColorHighlight="#664564"
@@ -147,6 +149,7 @@
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/choiceD"
         />
+<!--        android:background="@drawable/rounded_button"-->
 
     </LinearLayout>
 </ScrollView>
