--- a/app/src/main/res/layout/info_task_dialog.xml
+++ b/app/src/main/res/layout/info_task_dialog.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:background="#E7E8D1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -10,7 +11,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:text="Info"
-        android:textColor="#3F51B5"
+        android:textColor="#234E70"
         android:textSize="25sp"
         android:textStyle="bold" />
 
@@ -26,7 +27,7 @@
             android:layout_marginStart="5dp"
             android:text="Task:"
             android:textSize="20sp"
-            android:textColor="#2196F3"
+            android:textColor="#234E70"
             android:textStyle="bold" />
 
         <TextView
@@ -49,7 +50,7 @@
             android:layout_marginStart="5dp"
             android:text="Starting Date:"
             android:textSize="20sp"
-            android:textColor="#2196F3"
+            android:textColor="#234E70"
             android:textStyle="bold" />
 
         <TextView
@@ -72,7 +73,7 @@
             android:layout_marginStart="5dp"
             android:text="Finishing Date:"
             android:textSize="20sp"
-            android:textColor="#2196F3"
+            android:textColor="#234E70"
             android:textStyle="bold" />
 
         <TextView
