--- a/app/src/main/res/layout/medicationlayout.xml
+++ b/app/src/main/res/layout/medicationlayout.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:background="#E7E8D1"
             >
 
             <TextView
@@ -55,12 +56,12 @@
 
             <TextView
                 android:id="@+id/instruction"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:background="#C8A2C8"
-                android:textColor="@color/black"
+                android:layout_width="150dp"
+                android:layout_height="28dp"
+                android:background="#A7BEAE"
                 android:text="Press to edit/delete"
+                android:textColor="@color/black"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
