--- a/app/src/main/res/layout/view_habit.xml
+++ b/app/src/main/res/layout/view_habit.xml
@@ -11,7 +11,7 @@
         android:id="@+id/habityes"
         android:layout_width="52dp"
         android:layout_height="68dp"
-        android:background="@color/downArrow"
+        android:backgroundTint="@color/upArrow"
         android:contentDescription="no"
         android:src="@android:drawable/arrow_up_float"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +21,7 @@
         android:id="@+id/habitno"
         android:layout_width="52dp"
         android:layout_height="68dp"
-        android:background="@color/upArrow"
+        android:backgroundTint="@color/downArrow"
         android:contentDescription="yes"
         android:src="@android:drawable/arrow_down_float"
         app:layout_constraintStart_toStartOf="parent"
