--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="Mood" />
 
     <item
-        android:id="@+id/navigation_breathe"
+        android:id="@+id/navigation_relax"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Breathe" />
+        android:title="Relax" />
 
     <item
         android:id="@+id/navigation_notifications"
