--- a/app/src/main/res/layout/activity_lab.xml
+++ b/app/src/main/res/layout/activity_lab.xml
@@ -5,30 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lemonGreen"
-    tools:context=".ui.notifications.NotificationsPills">
+    android:background="@color/YellowAeroSpace"
+    tools:context=".lab.labActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/listview"
+            android:id="@+id/lab_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="130dp"
             android:paddingTop="10dp"
             android:paddingBottom="40dp"
-            android:background="@color/white"
-            >
-
-
+            android:background="@color/white">
         </ListView>
 
-
-
         <ImageView
-            android:id="@+id/empty"
+            android:id="@+id/lab_empty"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentEnd="true"
@@ -37,25 +32,24 @@
             android:foregroundGravity="center"
             android:layout_marginTop="300dp"
             android:clickable="false"
-            app:srcCompat="@drawable/ic_medicine_svgrepo_com__1_" />
+            app:srcCompat="@drawable/ic_lab_svgrepo_com" />
+
         <TextView
-            android:id="@+id/emptyText"
+            android:id="@+id/lab_emptyText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="false"
             android:layout_alignParentBottom="false"
-            android:textAlignment="center"
             android:layout_marginTop="600dp"
-            android:text="No Medicines"
             android:fontFamily="@font/robotobold"
+            android:text="No Lab Tests"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="30sp"
-            />
-
+            android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/lab_textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -63,11 +57,12 @@
             android:layout_marginStart="9dp"
             android:layout_marginTop="85dp"
             android:fontFamily="@font/robotobold"
-            android:text="Your Medicines"
-            android:textColor="@color/white"
+            android:text="Your Lab Tests"
+            android:textColor="@color/teal_700"
             android:textSize="35sp"
-            app:layout_constraintBottom_toTopOf="@+id/listview"
-            app:layout_constraintStart_toStartOf="@+id/listview" />
+            app:layout_constraintBottom_toTopOf="@+id/lab_listview"
+            app:layout_constraintStart_toStartOf="@+id/lab_listview"
+            app:layout_constraintTop_toBottomOf="@+id/lab_account_user_name_view" />
     </RelativeLayout>
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -79,11 +74,10 @@
             android:clipToPadding="false"
             android:paddingBottom="100dp">
 
-
         </androidx.core.widget.NestedScrollView>
 
         <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomAppBar"
+            android:id="@+id/lab_bottomAppBar"
             style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -91,16 +85,16 @@
             app:fabAlignmentMode="end"
             android:backgroundTint="@color/teal_700"
             app:hideOnScroll="true"
-            app:menu="@menu/nav_menu"
+            app:menu="@menu/lab_menu"
             />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_btn"
+            android:id="@+id/lab_add_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#FFA000"
             app:srcCompat="@drawable/ic_baseline_add_24"
-            app:layout_anchor="@id/bottomAppBar"
+            app:layout_anchor="@id/lab_bottomAppBar"
             />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
