--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/OrangeAeroSpace"
+    android:background="#cff7d3"
     tools:context=".ui.doctor.DoctorActivity">
 
         <RelativeLayout
