--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lemonGreen"
+    android:background="#cff7d3"
     tools:context=".ui.notifications.NotificationsPills">
 
     <RelativeLayout
@@ -19,20 +19,14 @@
             android:layout_marginTop="130dp"
             android:paddingTop="10dp"
             android:paddingBottom="40dp"
-            android:background="@color/white"
-            >
-
-
+            android:background="@color/white">
         </ListView>
-
-
 
         <ImageView
             android:id="@+id/empty"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="false"
             android:layout_alignParentBottom="false"
             android:foregroundGravity="center"
             android:layout_marginTop="300dp"
@@ -43,17 +37,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="false"
             android:layout_alignParentBottom="false"
             android:textAlignment="center"
             android:layout_marginTop="600dp"
             android:text="No Medicines"
             android:fontFamily="@font/robotobold"
             android:textColor="@color/black"
-            android:textSize="30sp"
-            />
-
-
+            android:textSize="30sp" />
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
